# Nebula-Desktop

./: .gitignore  DPI验证记录.md  README.md  Windows兼容性验证记录.md  index.html  made.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  兼容性记录.md  开发任务书.md  性能验证记录.md  技术文档.md  系统设计文档.md  退出恢复验证记录.md  需求文档.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  appbar.rs  audio.rs  config.rs  error.rs  mod.rs  notification.rs  storage.rs  system.rs  window.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/appbar/: mod.rs
src-tauri/src/core/audio/: mod.rs
src-tauri/src/core/config/: mod.rs
src-tauri/src/core/storage/: mod.rs
src-tauri/src/core/tray/: mod.rs
src-tauri/src/core/wifi/: mod.rs
src-tauri/src/core/window/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: mod.rs
src/app/: App.tsx  ControlCenterOverlayApp.tsx  LauncherOverlayApp.tsx  TaskbarOverlayApp.tsx  desktopDefaults.ts  overlayWindows.ts  routes.ts
src/ipc/: client.ts  types.ts
src/state/: index.ts
src/styles/: index.css
src/ui/: index.ts
src/ui/control-center/: ControlCenter.tsx  index.ts
src/ui/launcher/: Launcher.tsx  LauncherInput.tsx  LauncherResultItem.tsx  LauncherResultList.tsx  index.ts  launcher.types.ts
src/ui/shared/: index.ts
src/ui/taskbar/: Taskbar.tsx  TaskbarBadge.tsx  TaskbarItem.tsx  TaskbarPinnedItem.tsx  TaskbarStatusArea.tsx  index.ts  taskbar.types.ts
src/utils/: index.ts
