[package]
name = "nebula-desktop"
version = "0.1.0"
description = "Windows 10 / Windows 11 desktop enhancement layer"
authors = ["Nebula Desktop Contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nebula_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
